--- a/admin.html
+++ b/admin.html
@@ -78,6 +78,8 @@
 
       <div class="p-4 sm:p-6 max-w-5xl mx-auto">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          
+          <!-- Card Admin FIXO -->
           <div class="bg-white p-6 rounded-2xl border border-gray-100 shadow-sm">
             <div class="flex justify-between items-center mb-4">
               <h3 class="font-bold text-gray-900 flex items-center gap-2">
@@ -87,9 +89,13 @@
               <button id="btn-add-admin" class="text-xs bg-emerald-100 text-emerald-700 px-3 py-1 rounded-lg font-bold hover:bg-emerald-200">Adicionar</button>
             </div>
             <p class="text-xs text-gray-400 mb-4">Acesso ao Dashboard e administração de membros.</p>
-            <ul id="list-admins" class="space-y-2"></ul>
+            <!-- Lista que será preenchida -->
+            <ul id="list-admins" class="space-y-2">
+                <li class="text-sm text-gray-300 italic animate-pulse">Carregando lista...</li>
+            </ul>
           </div>
 
+          <!-- Card Líder FIXO -->
           <div class="bg-white p-6 rounded-2xl border border-gray-100 shadow-sm">
             <div class="flex justify-between items-center mb-4">
               <h3 class="font-bold text-gray-900 flex items-center gap-2">
@@ -99,78 +105,65 @@
               <button id="btn-add-leader" class="text-xs bg-emerald-100 text-emerald-700 px-3 py-1 rounded-lg font-bold hover:bg-emerald-200">Adicionar</button>
             </div>
             <p class="text-xs text-gray-400 mb-4">Acesso total ao sistema.</p>
-            <ul id="list-leaders" class="space-y-2"></ul>
+            <!-- Lista que será preenchida -->
+            <ul id="list-leaders" class="space-y-2">
+                <li class="text-sm text-gray-300 italic animate-pulse">Carregando lista...</li>
+            </ul>
           </div>
         </div>
       </div>
     </main>
   </div>
 
-    <script type="module">
-    import { checkAuth, setupSidebar, initIcons, showToast, logout, auth, db, ensureUserAccount } from "./logic.js";
-    import { doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+  <script type="module">
+    import { checkAuth, setupSidebar, initIcons, showToast, logout, auth, db, ensureUserAccount, consumeDirty, markDirty, clearDirty } from "./logic.js";
+    import { doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
     import { fetchSignInMethodsForEmail } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-    const CACHE_KEY = "guilda_security_cache_v1";
-
-    function readCache() {
-      try {
-        const raw = sessionStorage.getItem(CACHE_KEY);
-        if (!raw) return null;
-        const parsed = JSON.parse(raw);
-        if (!parsed || typeof parsed !== "object") return null;
-        parsed.admins = Array.isArray(parsed.admins) ? parsed.admins : [];
-        parsed.leaders = Array.isArray(parsed.leaders) ? parsed.leaders : [];
-        return parsed;
-      } catch (_) { return null; }
-    }
-
-    function writeCache(data) {
-      try { sessionStorage.setItem(CACHE_KEY, JSON.stringify(data || {admins:[], leaders:[]})); } catch (_) {}
-    }
-
-    // Ícones imediatos (menu/sidebar não “somem” aguardando Firestore)
+    // Inicializa interface antes da auth
+    setupSidebar();
     initIcons();
-
     document.getElementById('btn-logout')?.addEventListener('click', logout);
 
     let securityData = { admins: [], leaders: [] };
 
-    const user = await checkAuth();
-    if (user) {
-      setupSidebar();
-
-      // Primeiro paint com cache
-      const cached = readCache();
-      if (cached) {
-        securityData = cached;
+    // Cache instantâneo (evita recarregar ao trocar de tela)
+    const cachedSec = localStorage.getItem('securityData');
+    if (cachedSec) {
+      try {
+        securityData = JSON.parse(cachedSec) || { admins: [], leaders: [] };
+        securityData.admins = Array.isArray(securityData.admins) ? securityData.admins : [];
+        securityData.leaders = Array.isArray(securityData.leaders) ? securityData.leaders : [];
         renderList('admins', securityData.admins);
         renderList('leaders', securityData.leaders);
-      } else {
-        document.getElementById('list-admins').innerHTML = "<li class='text-sm text-gray-300 italic'>Carregando...</li>";
-        document.getElementById('list-leaders').innerHTML = "<li class='text-sm text-gray-300 italic'>Carregando...</li>";
+        localStorage.setItem('securityData', JSON.stringify(securityData));
+        clearDirty('security');
+      } catch(e) {}
+    }
+
+
+    // Verifica login e carrega dados
+    checkAuth().then(async (user) => {
+      if(!user) return;
+      const shouldSync = !cachedSec || consumeDirty('security');
+      if (shouldSync) await load();
+});
+
+    async function load() {
+      try {
+        const snap = await getDoc(doc(db, "guildConfig", "security"));
+        securityData = snap.exists() ? (snap.data() || {}) : {};
+        securityData.admins = Array.isArray(securityData.admins) ? securityData.admins : [];
+        securityData.leaders = Array.isArray(securityData.leaders) ? securityData.leaders : [];
+
+        renderList('admins', securityData.admins);
+        renderList('leaders', securityData.leaders);
+        localStorage.setItem('securityData', JSON.stringify(securityData));
+        clearDirty('security');
+      } catch (e) {
+        console.error(e);
+        showToast('error', e?.message || 'Erro ao carregar configurações.');
       }
-
-      // Tempo real: atualiza quando houver mudança
-      onSnapshot(
-        doc(db, "guildConfig", "security"),
-        (snap) => {
-          const data = snap.exists() ? (snap.data() || {}) : {};
-          data.admins = Array.isArray(data.admins) ? data.admins : [];
-          data.leaders = Array.isArray(data.leaders) ? data.leaders : [];
-          securityData = data;
-          writeCache(data);
-
-          renderList('admins', securityData.admins);
-          renderList('leaders', securityData.leaders);
-        },
-        (err) => {
-          console.error("onSnapshot security:", err);
-          showToast('error', 'Erro ao sincronizar permissões.');
-        }
-      );
-
-      initIcons();
     }
 
     function renderList(type, list) {
@@ -184,7 +177,7 @@
 
       list.forEach((email) => {
         const li = document.createElement('li');
-        li.className = "flex justify-between items-center bg-gray-50 p-3 rounded-xl text-sm border";
+        li.className = "flex justify-between items-center bg-gray-50 p-3 rounded-xl text-sm border animate-in";
         li.innerHTML = `
           <span class="truncate pr-2">${escapeHtml(email)}</span>
           <button class="btn-remove text-red-400 hover:text-red-600" data-type="${type}" data-email="${escapeHtml(email)}" title="Remover">
@@ -236,47 +229,52 @@
 
         // Se a conta não existir, cria (sem derrubar seu login)
         const methods = await fetchSignInMethodsForEmail(auth, cleanEmail);
+        let created = false;
         if (!methods || methods.length === 0) {
           const pass = prompt('Conta não existe. Defina uma senha (mín. 6):');
-          if (!pass) { showToast('error', 'Senha obrigatória para criar a conta.'); return; }
+          if (!pass) {
+            showToast('error', 'Senha obrigatória para criar a conta.');
+            return;
+          }
           const pass2 = prompt('Confirme a senha:');
-          if (pass2 !== pass) { showToast('error', 'As senhas não conferem.'); return; }
-          await ensureUserAccount(cleanEmail, pass);
-          showToast('success', 'Conta criada no Auth.');
+          if (pass2 !== pass) {
+            showToast('error', 'As senhas não conferem.');
+            return;
+          }
+          const res = await ensureUserAccount(cleanEmail, pass);
+          created = !!res?.created;
         }
 
         securityData[type].push(cleanEmail);
-        securityData[type] = Array.from(new Set(securityData[type])).sort((a,b)=>a.localeCompare(b));
+        await saveSecurity();
 
-        await setDoc(doc(db, "guildConfig", "security"), {
-          admins: securityData.admins || [],
-          leaders: securityData.leaders || []
-        }, { merge: true });
-
-        showToast('success', 'Permissão adicionada.');
+        showToast('success', created ? 'Conta criada e acesso liberado.' : 'Acesso liberado.');
       } catch (e) {
         console.error(e);
-        showToast('error', e?.message || 'Erro ao adicionar.');
+        showToast('error', e?.message || 'Erro ao adicionar acesso.');
       }
     }
 
     async function removeAccess(type, email) {
       try {
-        if (!confirm(`Remover ${email}?`)) return;
+        if (!email) return;
+        if (!confirm(`Remover acesso de ${email}?`)) return;
 
-        securityData[type] = (securityData[type] || []).filter(x => x !== email);
+        securityData[type] = (securityData[type] || []).filter((e) => e !== email);
+        await saveSecurity();
 
-        await setDoc(doc(db, "guildConfig", "security"), {
-          admins: securityData.admins || [],
-          leaders: securityData.leaders || []
-        }, { merge: true });
-
-        showToast('success', 'Removido.');
+        showToast('success', 'Acesso removido.');
       } catch (e) {
         console.error(e);
-        showToast('error', e?.message || 'Erro ao remover.');
+        showToast('error', e?.message || 'Erro ao remover acesso.');
       }
+    }
+
+    async function saveSecurity() {
+      await setDoc(doc(db, 'guildConfig', 'security'), securityData, { merge: true });
+      await load();
     }
   </script>
 </body>
 </html>
+
