--- a/camp.html
+++ b/camp.html
@@ -227,6 +227,40 @@
       renderCamps();
     });
   </script>
+
+  <!-- OTK Footer -->
+  <footer id="otk-footer" class="mt-12 border-t border-emerald-500/10 bg-slate-950 text-white">
+    <div class="mx-auto w-full max-w-5xl px-4 py-10">
+      <div class="flex flex-col items-center gap-4">
+        <div class="flex items-center justify-center gap-3">
+          <a href="https://instagram.com/ottakubrasil" target="_blank" rel="noopener noreferrer"
+             class="flex h-11 w-11 items-center justify-center rounded-full bg-white/10 ring-1 ring-white/10 transition hover:bg-white/15"
+             aria-label="Instagram principal: @ottakubrasil" title="@ottakubrasil">
+            <i data-lucide="instagram" class="h-5 w-5"></i>
+          </a>
+          <a href="https://instagram.com/gameotk" target="_blank" rel="noopener noreferrer"
+             class="flex h-11 w-11 items-center justify-center rounded-full bg-white/10 ring-1 ring-white/10 transition hover:bg-white/15"
+             aria-label="Instagram gaming: @gameotk" title="@gameotk">
+            <i data-lucide="instagram" class="h-5 w-5"></i>
+          </a>
+          <a href="https://ottakubrasil.online" target="_blank" rel="noopener noreferrer"
+             class="flex h-11 w-11 items-center justify-center rounded-full bg-white/10 ring-1 ring-white/10 transition hover:bg-white/15"
+             aria-label="Site: ottakubrasil.online" title="ottakubrasil.online">
+            <i data-lucide="globe" class="h-5 w-5"></i>
+          </a>
+        </div>
+
+        <div class="text-center">
+          <p class="text-sm font-semibold tracking-wide text-white/90">Ottakubrasil • Guilda Hub</p>
+          <p class="mt-2 max-w-xl text-xs leading-relaxed text-white/65">
+            Central de guilda e eventos: organização, velocidade e controle para facilitar sua vida no dia a dia.
+          </p>
+          <p class="mt-4 text-xs text-white/50">© Ottakubrasil</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
 
