--- a/admin.html
+++ b/admin.html
@@ -285,7 +285,7 @@
   </script>
 
   <!-- OTK Footer -->
-  <footer id="otk-footer" class="mt-12 border-t border-emerald-500/10 bg-slate-950 text-white">
+  <footer id="otk-footer" class="mt-12 border-t border-emerald-500/10 text-white">
     <div class="mx-auto w-full max-w-5xl px-4 py-10">
       <div class="flex flex-col items-center gap-4">
         <div class="flex items-center justify-center gap-3">
