--- a/admin.html
+++ b/admin.html
@@ -22,7 +22,20 @@
       <div class="flex items-center justify-between p-5 border-b border-gray-100">
         <div class="flex items-center gap-3">
           <div class="w-10 h-10 bg-gradient-to-br from-emerald-500 to-green-600 rounded-xl flex items-center justify-center shadow-lg shadow-green-200 text-white">
-            <i data-lucide="shield" class="w-5 h-5"></i>
+            <div class="cat-in-square cat-in-square--sidebar" aria-hidden="true">
+              <div class="cat-symbol">
+                <div class="ear left"></div>
+                <div class="ear right"></div>
+                <div class="head">
+                  <div class="mark"></div>
+                  <div class="eyes">
+                    <div class="eye left"></div>
+                    <div class="eye right"></div>
+                  </div>
+                  <div class="nose"></div>
+                </div>
+              </div>
+            </div>
           </div>
           <div>
             <h1 class="font-bold text-gray-900 text-lg leading-tight">Guilda e eventos</h1>
