--- a/index.html
+++ b/index.html
@@ -19,7 +19,21 @@
     <div class="login-card">
       <div class="flex items-center gap-3 mb-4">
         <div class="w-11 h-11 rounded-2xl flex items-center justify-center bg-gradient-to-br from-emerald-500/20 to-green-500/10 border border-emerald-500/30 text-emerald-600 shadow-lg shadow-emerald-500/10">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2l8 4v7c0 5-3.4 9.4-8 9.4S4 18 4 13V6l8-4z"/><path d="M9 12l2 2 4-5"/></svg>
+          <!-- Símbolo (Gato) - componente CSS, sem imagem -->
+          <div class="cat-in-square cat-in-square--login" aria-hidden="true">
+            <div class="cat-symbol">
+              <div class="ear left"></div>
+              <div class="ear right"></div>
+              <div class="head">
+                <div class="mark"></div>
+                <div class="eyes">
+                  <div class="eye left"></div>
+                  <div class="eye right"></div>
+                </div>
+                <div class="nose"></div>
+              </div>
+            </div>
+          </div>
         </div>
         <div>
           <div class="text-base font-black text-gray-900 leading-tight">Guilda HUB</div>
